<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="currency_conversion">Currency Conversion</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="you_cancelled_the_action_successfully">You cancelled the Action successfully.</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="no_internet_connection">No Internet Connection,\nCheck your Connection, then Try again.</string>
    <string name="unknown_connection_problem">Unknown Connection problem,\nPlease try again.</string>
    <string name="there_is_a_problem_with_our_servers_please_try_again">There is a problem with our servers,\nPlease try again.</string>
    <string name="unexpected_error_please_try_again_or_contact_us_if_persists">Unexpected error, Please try again,\nOr contact us if persists</string>
    <string name="something_happened_on_our_end_please_try_again_or_contact_us_if_persists">Something happened on our end, Please try again,\nOr contact us if persists</string>
    <string name="base_currency">Base Currency</string>
    <string name="base_value">Base Value</string>
    <string name="swap">Swap</string>
    <string name="target_value">Target Value</string>
    <string name="target_currency">Target Currency</string>
    <string name="details">Details</string>
    <string name="timeout_error_due_to_poor_internet_connection_check_connection_try_again"><![CDATA[Timeout error due to Poor Internet Connection,\nCheck Connection & try again]]></string>
    <string name="you_must_select_either_base_value_or_target_value">You must select either Base Value or Target Value.</string>
    <string name="currency_details">Currency Details</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="conversion_of_var_var_to_var">Conversion of %1$s %2$s to %3$s</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_three_days">Last Three Days</string>
    <string name="other_currencies">Other Currencies</string>
</resources>